--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "license": "CC-BY-NC-SA-4.0",
   "description": "Compile sticker pack metadata and manifests to sticker pack partials. ",
-  "contributors": [{
-    "name": "Romain Ricard",
-    "url": "https://romainricard.fr/"
-  }, {
-    "name": "Joshua (darkobits)",
-    "url": "https://joshua.dev"
-  }],
+  "contributors": [
+    {
+      "name": "Romain Ricard",
+      "url": "https://romainricard.fr/"
+    },
+    {
+      "name": "Joshua (darkobits)",
+      "url": "https://joshua.dev"
+    }
+  ],
   "homepage": "https://signalstickers.com/",
   "repository": {
     "type": "git",
@@ -42,6 +45,7 @@
     "better-ajv-errors": "^0.7.0",
     "fs-extra": "^9.1.0",
     "jest-expect-message": "^1.0.2",
+    "jest-github-reporter": "^1.0.1",
     "js-yaml": "^4.0.0",
     "p-queue": "^6.6.2",
     "p-retry": "^4.2.0",
